add hot deployment and swagger infomation
